# Furaide

./: .gitignore  AGENTS.md  README.md  fleet-manifest.json  lefthook.yml  opencode.json  opencode.jsonc  package.json
agents/: scout.md  (+40 more)
claude-code/cli/: pyproject.toml
claude-code/cli/src/mekiki/: __main__.py  aggregate.py  cli.py  config.py  db.py  events.py  improve.py  ingest.py  paths.py  transcript.py
claude-code/cli/src/mekiki/adapters/: __init__.py  base.py  claude_code.py  codex.py  opencode.py
claude-code/cli/src/mekiki/judge/: __init__.py  anthropic_backend.py  codex_backend.py  context.py  interface.py  orchestrator.py  prompts.py
claude-code/cli/src/mekiki/report/: __init__.py  generate.py  server.py
claude-code/cli/src/mekiki/report/templates/: base.html  overview.html  skill_detail.html
claude-code/cli/src/satori/: __main__.py  aggregate.py  cli.py  config.py  db.py  events.py  improve.py  ingest.py  paths.py
claude-code/cli/src/satori/judge/: __init__.py  anthropic_backend.py  codex_backend.py  context.py  interface.py  orchestrator.py  prompts.py
claude-code/cli/src/satori/report/: __init__.py  generate.py  server.py
claude-code/cli/tests/: conftest.py  test_adapters.py  test_aggregate.py  test_cli.py  test_db.py  test_events.py  test_improve.py  test_ingest.py  test_judge_context.py  test_judge_orchestrator.py  test_paths.py  test_report.py  test_smoke.py  test_transcript.py
claude-code/cli/tests/fixtures/: transcript_simple.jsonl  transcript_with_attribution.jsonl  transcript_with_compact.jsonl  transcript_with_skills_reminder.jsonl
(+496 files in other folders)
